Fix facet header on small screens. (#2774)

--- a/themes/finna2/less/finna/result-sidebar.less
+++ b/themes/finna2/less/finna/result-sidebar.less
@@ -91,9 +91,7 @@
     margin-bottom: 0;
     .tooltip-facet {
       margin-right: auto;
-    }
-    .fa-close {
-      margin-left: auto;
+      padding-left: 10px;
     }
   }
 }
